# BoardSystemMonitor

./: settings.gradle
BoardSystemMonitorServer/: CMakeLists.txt  qnx_server  server.cpp
BoardSystemMonitorServer/javaVersion/: javaServer.java
app/: build.gradle
app/src/androidTest/java/com/volvo/BoardSystemMonitor/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/volvo/BoardSystemMonitor/: CClient.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/volvo/BoardSystemMonitor/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
